# cpp-dispatch

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  conanfile.txt
include/dispatch/: dispatch.hpp
test/: dispatch.cpp
